@@ -104,11 +104,18 @@ hextorio-resource-richness-per-dist-vulcanus=[planet=vulcanus] Richness Incremen
 hextorio-resource-richness-per-dist-fulgora=[planet=fulgora] Richness Increment
 hextorio-resource-richness-per-dist-gleba=[planet=gleba] Richness Increment
 hextorio-resource-richness-per-dist-aquilo=[planet=aquilo] Richness Increment
+hextorio-planet-size-nauvis=[planet=nauvis] Planet Size
+hextorio-planet-size-vulcanus=[planet=vulcanus] Planet Size
+hextorio-planet-size-fulgora=[planet=fulgora] Planet Size
+hextorio-planet-size-gleba=[planet=gleba] Planet Size
+hextorio-planet-size-aquilo=[planet=aquilo] Planet Size
 hextorio-starting-resources-mixed=Mixed Starting Resources
 hextorio-default-resources-mixed=Mixed Resources
-hextorio-trade-volume-per-dist-exp=Trade Volume Exponent
-hextorio-trade-volume-per-dist-base=Trade Volume Base
-hextorio-trades-per-hex=Trades Per Hex
+hextorio-trades-per-hex-nauvis=[planet=nauvis] Trades Per Hex
+hextorio-trades-per-hex-vulcanus=[planet=vulcanus] Trades Per Hex
+hextorio-trades-per-hex-fulgora=[planet=fulgora] Trades Per Hex
+hextorio-trades-per-hex-gleba=[planet=gleba] Trades Per Hex
+hextorio-trades-per-hex-aquilo=[planet=aquilo] Trades Per Hex
 hextorio-coin-trade-chance=Coin Trade Chance
 hextorio-sell-trade-chance=Sell Trade Chance
 hextorio-quality-cost-multiplier=Quality Cost Multiplier
@@ -183,11 +190,17 @@ hextorio-resource-richness-per-dist-vulcanus=How much the richness of resources 
 hextorio-resource-richness-per-dist-fulgora=How much the richness of resources (including wells) increases per hex from the center of the map on [planet=fulgora].
 hextorio-resource-richness-per-dist-gleba=How much the richness of resources (including wells) increases per hex from the center of the map on [planet=gleba].
 hextorio-resource-richness-per-dist-aquilo=How much the richness of resources (including wells) increases per hex from the center of the map on [planet=aquilo].
+hextorio-planet-size-nauvis=The number of hex tiles from spawn after which hexes stop generating on [planet=nauvis]. Increasing this would increase how far you must go to find the highest valued items in trades.
+hextorio-planet-size-vulcanus=The number of hex tiles from spawn after which hexes stop generating on [planet=vulcanus]. Increasing this would increase how far you must go to find the highest valued items in trades.
+hextorio-planet-size-fulgora=The number of hex tiles from spawn after which hexes stop generating on [planet=fulgora]. Increasing this would increase how far you must go to find the highest valued items in trades.
+hextorio-planet-size-gleba=The number of hex tiles from spawn after which hexes stop generating on [planet=gleba]. Increasing this would increase how far you must go to find the highest valued items in trades.
+hextorio-planet-size-aquilo=The number of hex tiles from spawn after which hexes stop generating on [planet=aquilo]. Increasing this would increase how far you must go to find the highest valued items in trades.
 hextorio-starting-resources-mixed=Are resources in the starting hex on [planet=nauvis] mixed?
 hextorio-default-resources-mixed=Are resources in the other hexes mixed, including the starting hexes of the other planets?
-hextorio-trade-volume-per-dist-exp=Compounding multiplier of trade volume per hex from the center of the map.
-hextorio-trade-volume-per-dist-base=Base trade volume per hex.
-hextorio-trades-per-hex=Number of trades that each hex has other than the starter hex on most planets.
+hextorio-trades-per-hex-nauvis=Number of trades that each hex has other than the starter hex on [planet=nauvis].
+hextorio-trades-per-hex-vulcanus=Number of trades that each hex has other than the starter hex on [planet=vulcanus].
+hextorio-trades-per-hex-fulgora=Number of trades that each hex has other than the starter hex on [planet=fulgora].
+hextorio-trades-per-hex-gleba=Number of trades that each hex has other than the starter hex on [planet=gleba].
 hextorio-trades-per-hex-aquilo=Number of trades that each hex has other than the starter hex on [planet=aquilo].
 hextorio-coin-trade-chance=Chance of a trade involving coins.
 hextorio-sell-trade-chance=Chance of a coin-involving trade being one for selling items instead of buying items.
