@@ -179,4 +179,44 @@ data:extend({
         maximum_value = 32,
         order = "zec",
     },
+    {
+        type = "int-setting",
+        name = "hextorio-planet-size-nauvis",
+        setting_type = "runtime-global",
+        default_value = 48,
+        minimum_value = 1,
+        maximum_value = 100,
+    },
+    {
+        type = "int-setting",
+        name = "hextorio-planet-size-vulcanus",
+        setting_type = "runtime-global",
+        default_value = 42,
+        minimum_value = 1,
+        maximum_value = 100,
+    },
+    {
+        type = "int-setting",
+        name = "hextorio-planet-size-fulgora",
+        setting_type = "runtime-global",
+        default_value = 42,
+        minimum_value = 1,
+        maximum_value = 100,
+    },
+    {
+        type = "int-setting",
+        name = "hextorio-planet-size-gleba",
+        setting_type = "runtime-global",
+        default_value = 42,
+        minimum_value = 1,
+        maximum_value = 100,
+    },
+    {
+        type = "int-setting",
+        name = "hextorio-planet-size-aquilo",
+        setting_type = "runtime-global",
+        default_value = 36,
+        minimum_value = 1,
+        maximum_value = 100,
+    },
 })
